--- a/gb/19/10/1/n11560915.md
+++ b/gb/19/10/1/n11560915.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aw2751/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aw2751/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aw2751/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aw2751/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aw2751/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aw2751/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aw2751/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aw2751/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aw2751/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aw2751/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aw2751/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aw2751/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aw2751/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国留学生涉嫌杀人案安省开审 其父身份曝光</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/IMG_5802__1_-1-600x400.jpg" />
 <h6>范博乔获得保释后，住在万锦市Woodbine Avenue与Rodick Road街口附近的独立屋里。（周月谛/大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年10月02日讯】（大纪元记者周月谛多伦多报导）多伦多<ahref="https://github.com/aw2751/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F.md#1">中国留学生</a><ahref="https://github.com/aw2751/djy/blob/master/gb/tag/%E8%8C%83%E5%8D%9A%E4%B9%94.md#1">范博乔</a>（Boqiao Fan，音译）涉嫌在多伦多杀人后被保释，住在200多万元的独立屋，并聘请顶级律师。他的经济来源被广泛关注，范父身份成焦点。</p>
-<p>10月1日，<ahref="https://github.com/aw2751/djy/blob/master/gb/tag/%E8%8C%83%E5%8D%9A%E4%B9%94.md#1">范博乔</a>在父亲范题陪同下到安省刑事法院出庭。范博乔身穿深蓝条纹西服；他父亲穿黑西服、黑袜子及黑皮鞋。两人的面部表情严肃，在法院里一直戴耳机，听法院提供的中文同声翻译。</p>
-<figure id="attachment_11561503" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/DSCF7684-1.jpg"><img class="size-medium wp-image-11561503" src="https://i.epochtimes.com/assets/uploads/2019/10/DSCF7684-1-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2018年2月12日，范博乔走出安省刑事法院。（周月谛/大纪元）</figcaption></figure>
+<p>【大纪元2019年10月02日讯】（大纪元记者周月谛多伦多报导）多伦多<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F.md#1">中国留学生</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8C%83%E5%8D%9A%E4%B9%94.md#1">范博乔</a>（Boqiao Fan，音译）涉嫌在多伦多杀人后被保释，住在200多万元的独立屋，并聘请顶级律师。他的经济来源被广泛关注，范父身份成焦点。</p>
+<p>10月1日，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8C%83%E5%8D%9A%E4%B9%94.md#1">范博乔</a>在父亲范题陪同下到安省刑事法院出庭。范博乔身穿深蓝条纹西服；他父亲穿黑西服、黑袜子及黑皮鞋。两人的面部表情严肃，在法院里一直戴耳机，听法院提供的中文同声翻译。</p>
+<figure id="attachment_11561503" aria-describedby="caption-attachment-11561503" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/DSCF7684-1.jpg"><img class="size-medium wp-image-11561503" src="https://i.epochtimes.com/assets/uploads/2019/10/DSCF7684-1-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-11561503" class="wp-caption-text">2018年2月12日，范博乔走出安省刑事法院。（周月谛/大纪元）</figcaption></figure>
 <p>本案的检控官奥林．布韦特（Oslyn Braithwaite）告诉大纪元：“法院将在本周确定陪审团的名单。审判将在下周正式开始，几乎每天开庭，除了感恩节以外。我们估计审判将在10月底结束。”</p>
 <p>从下周开始，控方将在法庭上公开警方指控范博乔的证据，并传唤多名证人。</p>
 <h2>高额生活费引关注</h2>
 <p>记者了解到，范博乔是中国官二代兼富二代。他父亲范题是中国建设银行广东省惠州市分行党委书记兼行长，还是惠州市银行业协会会长，曾任建行广东省东莞市分行党委书记兼行长。大陆媒体曾多次报导他出席当地的党委活动。</p>
 <p>安省法院文件显示，范博乔获得保释后，住在万锦市一栋两层、有三个室内车位的独立屋里（Woodbine Avenue与Rodick Road街口附近）。安省地产文件显示，这栋独立屋的市场价超过200万元。</p>
 <p>范博乔聘请的辩护律师格林斯潘（Brian Greenspan），是加拿大顶级刑事律师之一 。他曾帮助乐坛天王贾斯汀．比伯（Justin Bieber）、名模娜奥美．金宝（Naomi Campbell）等人打官司。</p>
-<h2>死者也是<ahref="https://github.com/aw2751/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F.md#1">中国留学生</a></h2>
-<p>据<ahref="https://github.com/aw2751/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E8%AD%A6%E6%96%B9.md#1">多伦多警方</a>透露，多伦多北约克的一栋镇屋（Hounslow Avenue 13号）在2017年2月发生谋杀案。当时19岁的王浩志在其宿舍内受重伤。</p>
+<h2>死者也是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F.md#1">中国留学生</a></h2>
+<p>据<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E8%AD%A6%E6%96%B9.md#1">多伦多警方</a>透露，多伦多北约克的一栋镇屋（Hounslow Avenue 13号）在2017年2月发生谋杀案。当时19岁的王浩志在其宿舍内受重伤。</p>
 <p>王浩志的多名朋友把他送往医院抢救后，他因伤势过重身亡。警方将范博乔逮捕，并起诉他二级谋杀罪名。</p>
 <p>据范博乔的同学介绍，范是广东惠州人，已来加拿大6年左右。他曾在多伦多私立高中McDonald国际学院念书，已完成安省12年级课程。</p>
 <p>本案的死者王浩志是河南人。据他的朋友介绍，他2015年来加拿大留学，有高中学历。他与中国留学生谭佳琪交往一段时间后，女方提出分手，并与同学范博乔展开另一段恋情。#</p>
@@ -27,42 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/17/3/21/n8951471.md#1">同学眼中的高分男孩?范博乔拘留所过20岁生日</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/20/n12122381.md#1">多伦多色情按摩院命案 警方提起恐袭指控</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12122329.md#1">疫情下 安省人夏天不得在营地过夜</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12122306.md#1">安省学校关闭至本学期结束</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12122129.md#1">安省周二重开 省民可以做什么？</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12121987.md#1">微电影《希望的声音II》线上播出</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12121972.md#1">5月19日起 多伦多狗公园重开</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12121953.md#1">安省周二报告增427人染疫 死亡人数下降</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12121558.md#1">本周六开始 可驱车游览多伦多动物园</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/19/n12121457.md#1">73%死亡病例来自养老院 省独立委员会将调查</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/21/n8951471.md#1">同学眼中的高分男孩?范博乔拘留所过20岁生日</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/22/n13663533.md#1">加拿大各省最新疫情数据 （3月31日）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687201.md#1">谁要打第四针疫苗？安省很快将收到指南</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687105.md#1">37岁亚裔男子失踪 警方在水渠寻获其尸体</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687068.md#1">业界警告安省：或涨保育人员工资或缺人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687061.md#1">安省周四增3,139人染疫 住院患者增加</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687040.md#1">多伦多正式取消公共图书馆逾期罚款</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687027.md#1">多市偷车案件增加?丰田凌志等车型最易被盗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13684612.md#1">发视频支持自由车队 杜咸区警官面违纪指控</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684385.md#1">加拿大安省提高房地产外国买家税至20%</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/19/n10071544.md#1" target="_blank">唐恩：从天安门自焚骗局看善恶有报</a></li><li><a href="https://github.com/aw2751/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045304.md#1" target="_blank">《苦菜花》人物原型的真实人生（4）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/12/n11718013.md#1" target="_blank">制裁迫害法轮功者 美国政要支持采取行动</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12118997.md#1">世卫大会习近平提20亿美元援助 国人叫苦</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12117371.md#1">WHA登场世卫中共拒台 料各国将联手发声反制</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12118007.md#1">“谷辣斯．尤达卡”成为新任台湾总统府发言人</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/17/n12116271.md#1">共军是纸老虎 陆青年：无法打赢任何对外战争</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12118640.md#1">两会前习抓胡问鸣 矛头指向红二代</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/17/n12116007.md#1">盼辛龙走出丧妻之痛 吴宗宪：已下时间通牒</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12117650.md#1">因男团解散陷低潮 潘君仑返乡务农找回动力</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12118146.md#1">吴念真粉专已找回 遗憾贴文“几乎删光”</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12119095.md#1">巨石强森女儿闯进WWE 成史上最年轻签约选手</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/17/n12115416.md#1">【疫情中的纽约人】破解预言的人</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/18/n12117860.md#1">蒲隆地驱逐WHO官员 仰赖上帝来抗疫</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/17/n12116029.md#1">隋朝人仙岛奇遇 回国已是唐朝中期</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/5/1/n12076409.md#1">【历史上的瘟疫】带走伦敦1/5人口的瘟疫</a></li>
-<li><a href="https://github.com/aw2751/djy/blob/master/gb/20/4/5/n12004394.md#1">入地府看见善恶记账簿 忏悔改过可销债</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aw2751/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aw2751/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/1/n11560915.htm">中国留学生涉嫌杀人案安省开审 其父身份曝光</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/1/n11560915.htm">中国留学生涉嫌杀人案安省开审 其父身份曝光</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aw2751/djy/blob/master/gb/19/10/1/n11560915.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aw2751/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aw2751/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aw2751/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aw2751/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aw2751/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/10/1/n11560915.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
